@@ -6,6 +6,7 @@ next:
          - improve logging of invalid http requests
          - check_logfile: improve detection of required macros
          - add list-combine option
+         - add challenge password support for csr
 
 0.37     Sun Sep  7 11:41:00 CEST 2025
          - update windows exporter to 0.31.3
